# ps-robovi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _sbatch-build-opencv.sh  build.sh  canny.py  cmake_install.sh  get_dota.sh  install-opencv.sh  main.cpp  run.sh  testcv  testcv.cpp  uporaba.md
src/: Canny.cpp  Canny.h  ImageOps.cpp  ImageOps.h  PipelineTimer.cpp  PipelineTimer.h  ScopeTimer.cpp  ScopeTimer.h  main.cpp  mpi_main.cpp  pthread_main.cpp  serial_main.cpp
src/mpi/: MPITasks.cpp  MPITasks.h  mpi_main.cpp
src/pthread/: TaskQueue.cpp  TaskQueue.h  WriterQueue.cpp  WriterQueue.h  pthread_main.cpp
